# openssh-portable

./: .gitignore  CMakeLists.txt  appveyor.yml  cmake-config.h.in  readpass.c  ssh.h  sshconnect.c
contrib/win32/openssh/: Win32-OpenSSH.sln  libssh.vcxproj.filters  openbsd_compat.vcxproj  openbsd_compat.vcxproj.filters  paths.targets  scp.vcxproj  scp.vcxproj.filters  sftp-server.vcxproj  sftp.vcxproj  ssh-pkcs11-helper.vcxproj  ssh-sk-helper.vcxproj  sshd.vcxproj  sshd.vcxproj.filters  unittest-bitmap.vcxproj  unittest-kex.vcxproj  unittest-match.vcxproj  unittest-misc.vcxproj  unittest-sshbuf.vcxproj  unittest-utf8.vcxproj  unittest-win32compat.vcxproj  version.rc  win32iocompat.vcxproj
contrib/win32/win32compat/: fileio.c  misc.c  pwd.c
openbsd-compat/: arc4random.c  getrrsetbyname.c
